--- a/test.html
+++ b/test.html
@@ -4,11 +4,13 @@
 	<title>test</title>
 </head>
 <body>
-	<button onclick="start()"> Test</button>
-	<input nc-value="age[0].last" />
+	<button onclick="start()"> add</button>
+	<input nc-value="age[0].thisYear" />
+	{{age[0].thisYear}}
 	<p nc-for="  row   in  age  ">
 		{{row.last}},{{row.thisYear}}
 	</p>
+	<button onclick="remove()">remove</button>
 </body>
 <script type="text/javascript" src="nice-mvvm.js"></script>
 <script type="text/javascript">
@@ -30,7 +32,14 @@
 	};
 
 	function start(){
-		$nc.age[0].last++;
+		$nc.age.push({
+			last:1,
+			thisYear:2
+		});
+	}
+
+	function remove(){
+		$nc.age.pop();
 	}
 
 
