--- a/test.html
+++ b/test.html
@@ -2,13 +2,23 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>test</title>
+
+	<style type="text/css">
+	
+	.test {
+		color: red
+	}
+
+
+	</style>
 </head>
 <body>
-	<input type="text" name="" nc-if="showUserLength" onblur="alert(10)" nc-value="userName" onchange="changeTxt()" />
+	<input type="text" name=""  nc-value="userName" onchange="changeTxt()" />
+	<input type="text" name=""  nc-value="userName" onchange="changeTxt()" />
 	<input type="radio" name="radio" onclick="setRadio(1)" />
 	<input type="radio" name="radio" onclick="setRadio(2)" />
 	<select nc-value='userName'>
-		<option nc-for="row in users" nc-value="row.name" >{{row.name}}</option>
+		<option nc-for="row in users" nc-value="row.age" >{{row.name}}</option>
 	</select>
 	<button onclick="add()">addUser</button>
 	<table>
@@ -18,12 +28,14 @@
 			<th>Age</th>
 			<th>operation</th>
 		</tr>
-		<tr nc-for="row in users">
-			<td>$index</td>
-			<td>{{row.name}}</td>
-			<td>{{row.age}}</td>
-			<td><button onclick="del($index)">remove</button></td>
-		</tr>
+		<tbody>
+			<tr nc-for="row in users" nc-class="color?test: ">
+				<td>{{$index}}</td>
+				<td>{{row.name}}</td>
+				<td>{{row.age}}</td>
+				<td><button onclick="del({{$index}})">remove</button></td>
+			</tr>
+		</tbody>
 	</table>
 </body>
 <script type="text/javascript" src="nice-mvvm.js"></script>
@@ -45,6 +57,7 @@
 	$nc.userlength = 0;
 	$nc.showUserLength = false;
 	$nc.userName = 'zhangsan-0';
+	$nc.color = true;
 
 	$watch(['users'],function(users){
 		$nc.userlength = users.length;
