解决nc-for中，迭代对象entity变量命名的问题。正确的识别出命名单词，而不是盲目替换。

--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
 		</tr>
 		<tbody>
 			<tr nc-for="row in users">
-				<td name="{{row.name}}">{{2+1+'abc'}}</td>
+				<td name="{{row.name}}">{{2+1+'abcrow_row_'+row.age}}</td>
 				<td>{{row.name}}</td>
 				<td>{{row.age}}</td>
 				<td><button onclick="del({{$index}})">remove</button></td>
