优化nc-src和nc-text，整合bind_txt，使两个指令全部具备filter的功能，并且拥有组合特性。

--- a/test.html
+++ b/test.html
@@ -44,7 +44,7 @@
 		</tbody>
 	</table>
 </body>
-<script type="text/javascript" src="nice-mvvm.min.js"></script>
+<script type="text/javascript" src="nice-mvvm.js"></script>
 <script type="text/javascript">
 	var nice_mvvm = $NICE_MVVM(document.getElementById('table_'));
 
