--- a/test - 副本.html
+++ b/test - 副本.html
@@ -26,7 +26,7 @@
 		{{userName}}
 	</div>
 </body>
-<script type="text/javascript" src="nice-mvvm.js"></script>
+<script type="text/javascript" src="nice-mvvm.min.js"></script>
 <script type="text/javascript">
 	var NM_1 = $NICE_MVVM(document.getElementById('NM_1'));
 	var NM_2 = $NICE_MVVM(document.getElementById('NM_2'));
