--- a/test.html
+++ b/test.html
@@ -28,6 +28,7 @@
 		<input type="text" nc-value="userName"></input>
 		{{userName}}
 		<input type="text" nc-value="userName"></input>
+		<input type="text" nc-value="age"></input>
 		<br/>
 
 		nc-src：
@@ -66,7 +67,7 @@
 
 
 </body>
-<script type="text/javascript" src="nice-mvvm.min.js"></script>
+<script type="text/javascript" src="nice-mvvm.js"></script>
 <script type="text/javascript">
 	//新建MVVM实例
 	var NM_1 = $NICE_MVVM(document.getElementById('NM_1'));
