修复bug: 当input框或其他可输入的表单域内，修改值后直接回车，会导致此节点被不停检测渲染。 此问题因为每次检测也是空检测，所以影响较小。但是总归不好，现在已经修复。

--- a/test.html
+++ b/test.html
@@ -67,7 +67,7 @@
 
 
 </body>
-<script type="text/javascript" src="nice-mvvm.js"></script>
+<script type="text/javascript" src="nice-mvvm.min.js"></script>
 <script type="text/javascript">
 	//新建MVVM实例
 	var NM_1 = $NICE_MVVM(document.getElementById('NM_1'));
