--- a/历史的/test.html
+++ b/历史的/test.html
@@ -69,7 +69,7 @@
 </body>
 <script type="text/javascript" src="../nice-mvvm.js"></script>
 <script type="text/javascript">
-	var nice_mvvm = $NICE_MVVM(document.getElementById('table_'));
+	var nice_mvvm = $NICE_MVVM('table_');
 
 	var $nc = nice_mvvm.$scope;
 
