--- a/test1.html
+++ b/test1.html
@@ -4,9 +4,19 @@
 	<title>test</title>
 </head>
 <body id="body_">
-	MVVM第一个实例：
+	
 	<div id="NM_1">
-		{{user.userName}} {{user.age}} <button onclick="init()">click</button>
+		<button onclick="search()">search</button>
+		<div nc-for="level_1 in ary">
+			{{level_1.name}}
+			<ul>
+				<li nc-for="level_2 in level_1.level_2">
+					<a href="http://www.com" class="{{level_2.$index}}{{level_2.name}}">
+						{{level_2.name}}
+					</a>
+				</li>
+			</ul>
+		</div>
 	</div>
 	
 
@@ -14,16 +24,24 @@
 <script type="text/javascript" src="nice-mvvm.js"></script>
 <script type="text/javascript">
 	//新建MVVM实例
-	var NM_1 = $NICE_MVVM(document.getElementById('NM_1'));
+	var NM_1 = $NICE_MVVM('NM_1');
 	$scope1 = NM_1.$scope;//拿到数据绑定对象
-	$scope1.user = null;
+	$scope1.ary = [];
+
+
 	NM_1.$init();//初始化MVVM
 	
-	function init(){
-		$scope1.user = {
-			userName:'xxx',
-			age:1
-		};
+	function search(){
+		if($scope1.ary.length == 0){
+			$scope1.ary.push({
+				name:'第一层',
+				level_2:[{
+					name:'第二层'
+				}]
+			});
+		}else{
+			$scope1.ary = [];
+		}
 	}
 	
 </script>
