修复bug:在nc-for内的某个节点上，如果单独使用$index，那么会出现删除节点不彻底的情况

--- a/test1.html
+++ b/test1.html
@@ -11,7 +11,7 @@
 			{{level_1.name}}
 			<ul>
 				<li nc-for="level_2 in level_1.level_2">
-					<a href="http://www.com" class="{{level_2.$index}}{{level_2.name}}">
+					<a href="#" class="{{level_2.$index}}">
 						{{level_2.name}}
 					</a>
 				</li>
