--- a/历史的/test.html
+++ b/历史的/test.html
@@ -26,7 +26,7 @@
 		<option nc-for="row in users" value="{{row.name}}">{{row.name}}</option>
 	</select>
 	<button onclick="add()">addUser</button>
-	<button class="{{addUserBtn?users:[]|addUserBtnStyleFitler}}" onclick="$nc.addUserBtn=!$nc.addUserBtn">反色</button>
+	<button class="{{addUserBtn|addUserBtnStyleFitler}}" onclick="$nc.addUserBtn=!$nc.addUserBtn">反色</button>
 	<table>
 		<tr>
 			<th><input type="checkbox" nc-value="checkbox_val" value="abc"></input></th>
@@ -44,21 +44,19 @@
 				<td name="a{{row.name}}">{{2+1+'abcrow_row_'+row.age}}</td>
 				<td nc-class="{{row.name}}" nc-text="{{'111'+row.name}}"></td>
 				<td>{{row.num|rowFilter}}</td>
-				<td><button onclick="del({{$index}})">remove</button></td>
+				<td><button onclick="del({{row.$index}})">remove</button></td>
 				<td>
 					<table>
 						<tr>
 							<th>index</th>
 							<th>Name</th>
 							<th>Age</th>
-							<th>operation</th>
 						</tr>
 						<tbody>
 							<tr nc-for="row_2 in users" id="{{row_2.$index}}">
 								<td name="a{{row_2.name}}">{{2+1+'abcrow_row_'+row_2.age}}</td>
 								<td nc-class="{{row_2.name}}" nc-text="{{'111'+row_2.name}}"></td>
-								<td>{{row_2.num|rowFilter:row_2}}</td>
-								<td><button onclick="del({{$index}})">remove</button></td>
+								<td>{{row_2.num|rowFilter:row_2}}</td><!--row_2是带着的参数 -->
 							</tr>
 						</tbody>
 					</table>
@@ -91,7 +89,7 @@
 	}
 
 	$nc.users = [];
-	for(var i=0;i<2;i++){
+	for(var i=0;i<3;i++){
 		$nc.users.push({
 			name:'zhangsan-'+i,
 			age:12,
@@ -127,7 +125,7 @@
 
 	function addUserBtnStyleFitler(addUserBtn){
 		//console.log(addUserBtn.length);
-		if(addUserBtn.length > 30){
+		if(addUserBtn){
 			return "test";
 		}else{
 			return "test2";
@@ -136,7 +134,7 @@
 	}
 
 	function rowFilter(param){
-		console.log(param);
+		//console.log(param);
 		// console.log($scope);
 		return param;
 	}
