修复bug：如果元素本身有onkeyup事件，并且方法中使用了this关键字，那么this的对象引用会错意（变成了Window），现在已经纠正了this的原本代表就是元素本身。

--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
 <body id="body_">
 	MVVM第一个实例：
 	<div id="NM_1">
-		<input type="text" nc-value="userName"></input>
+		<input type="text" nc-value="userName" onkeyup="console.log(this)"></input>
 		{{userName}}
 	</div>
 	MVVM第二个实例（与第一个实例互不影响）：
