修复select nc-value绑定，在强制显示已选项目不受列表长度增加影响方面，存在的问题。

--- a/历史的/test.html
+++ b/历史的/test.html
@@ -148,6 +148,7 @@
 	
 	nice_mvvm.$onload(function(){
 		document.getElementById('table_').removeAttribute('style');
+		console.log("渲染结束");
 	});
 </script>
 
