修改bug:checkbox 出现重复塞值

--- a/历史的/test.html
+++ b/历史的/test.html
@@ -29,7 +29,7 @@
 	<button class="{{addUserBtn|addUserBtnStyleFitler}}" onclick="$nc.addUserBtn=!$nc.addUserBtn">反色</button>
 	<table>
 		<tr>
-			<th><input type="checkbox" nc-value="checkbox_val" value="abc"></input></th>
+			<th><input type="checkbox" nc-value="checkbox_val" value=""></input><input type="checkbox" nc-value="checkbox_val" value="0"></input></th>
 			<th>index</th>
 			<th>Name</th>
 			<th>Age</th>
