调整检测刷新机制，降低cpu消耗。

--- a/历史的/test.html
+++ b/历史的/test.html
@@ -27,6 +27,7 @@
 	</select>
 	<button onclick="add()">addUser</button>
 	<button class="{{addUserBtn|addUserBtnStyleFitler}}" onclick="$nc.addUserBtn=!$nc.addUserBtn">反色</button>
+	<textarea nc-value="userName"></textarea>
 	<table>
 		<tr>
 			<th><input type="checkbox" nc-value="checkbox_val" value=""></input><input type="checkbox" nc-value="checkbox_val" value="0"></input></th>
