--- a/test_2.html
+++ b/test_2.html
@@ -4,21 +4,19 @@
 	<title>test</title>
 </head>
 <body id="mvvm">
-	
-	<input nc-value="request.str"></input>
-	<input nc-value="request.str"></input>
-	<textarea>{{request.str}}</textarea>
+	<span nc-if="step == 1">11111</span>
+	<span nc-if="step == 2">22222</span>
 	<button onclick="ok()">ccc</button>
 </body>
 <script type="text/javascript" src="nice-mvvm.js"></script>
 <script type="text/javascript">
 	var mvvm = $NICE_MVVM('mvvm');
 	$scope = mvvm.$scope;//拿到数据绑定对象
-	$scope.request = new Object();
+	$scope.step = 1;
 	mvvm.$init();//初始化MVVM
 
 	function ok(){
-		$scope.request = new Object();
+		$scope.step = 2;
 	}
 </script>
 
